# rust_rat

./: README.md
c# server/MVCController/: IUsersView.cs  MVC-Controller.csproj  UserController.cs
c# server/MVCModal/: MVC-Model.csproj  User.cs
c# server/MVCView/: Form1.Designer.cs  Form1.cs  MVC-View.csproj  UsersView.Designer.cs  UsersView.cs
c# server/UseMVCApplication/: Program.cs
rust client/: Cargo.toml
rust client/src/: main.rs  minidump.rs  old.cpp
