[package]
name = "tls_test"
version = "0.1.0"
edition = "2021"
rustflags = ["-C", "target-feature=+crt-static"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.8", features = ["winuser","libloaderapi","errhandlingapi","processthreadsapi","winbase","synchapi"] }
reqwest = { version = "0.11.12", features = ["blocking"] }
[dependencies]
native-tls = "0.2.11"
kernel32-sys = "0.2.2"
winapi = "0.3.9"
windows = "0.48.0"
json = "0.12.4"
datetime = "0.5.2"
advapi32-sys = "0.2.0"
tasklist = "0.2.12"
local-ip-address = "0.5.3"
process_path = "0.1.4"
base64 = "0.21.2"
secmem-proc = "0.3.1"
hash = "0.3.0"
paranoid-hash = "0.5.0"